[gd_scene load_steps=9 format=3 uid="uid://dbxbvedhq5d3m"]

[ext_resource type="Script" uid="uid://chwk4b7sp2ipo" path="res://Scripts/Character/Core/BaseCharacter3D.gd" id="1_iy7e0"]
[ext_resource type="PackedScene" uid="uid://dywu71vlhs52h" path="res://Scenes/CharacterModel.tscn" id="2_co0b2"]
[ext_resource type="Script" uid="uid://4kr2wsvmu7kq" path="res://Scripts/Character/Core/StatManager.gd" id="3_lvkcq"]
[ext_resource type="Script" uid="uid://dt6ebgjkr4fd4" path="res://Scripts/Inventory/Core/Universal_Inventory.gd" id="4_olav4"]
[ext_resource type="Script" uid="uid://bc3qf8uqwigtu" path="res://Scripts/Character/Core/equipment_manager.gd" id="5_i8vcl"]
[ext_resource type="Script" uid="uid://ctx1wbk37o6om" path="res://Scripts/Character/Core/FactionComponent.gd" id="6_lyisy"]
[ext_resource type="Script" uid="uid://b5fiky1kq3i45" path="res://Scripts/Character/Movement/MovementController.gd" id="7_g27ot"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_08fqu"]
height = 4.202881
radius = 0.5571289

[node name="NPC" type="CharacterBody3D"]
script = ExtResource("1_iy7e0")
metadata/_custom_type_script = "uid://chwk4b7sp2ipo"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.201294, -0.13259101)
shape = SubResource("CylinderShape3D_08fqu")

[node name="visuals" type="Node3D" parent="."]

[node name="Character_Female_09" parent="visuals" instance=ExtResource("2_co0b2")]

[node name="StatManager" type="Node" parent="."]
script = ExtResource("3_lvkcq")
metadata/_custom_type_script = "uid://4kr2wsvmu7kq"

[node name="InventorySystem" type="Node" parent="."]
script = ExtResource("4_olav4")
metadata/_custom_type_script = "uid://dt6ebgjkr4fd4"

[node name="EquipmentManager" type="Node" parent="."]
script = ExtResource("5_i8vcl")
metadata/_custom_type_script = "uid://bc3qf8uqwigtu"

[node name="FactionComponent" type="Node" parent="."]
script = ExtResource("6_lyisy")
metadata/_custom_type_script = "uid://ctx1wbk37o6om"

[node name="MovementController" type="Node" parent="."]
script = ExtResource("7_g27ot")
metadata/_custom_type_script = "uid://b5fiky1kq3i45"
